code review follow up