@@ -19,7 +19,6 @@
 
 package org.elasticsearch.common.xcontent;
 
-import org.elasticsearch.common.collect.Tuple;
 import org.elasticsearch.common.xcontent.cbor.CborXContent;
 import org.elasticsearch.common.xcontent.json.JsonXContent;
 import org.elasticsearch.common.xcontent.smile.SmileXContent;
@@ -49,7 +48,7 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public String formatPathParameter() {
+        public String queryParameter() {
             return "json";
         }
 
@@ -59,14 +58,14 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
+        public Set<MediaType.MediaTypeValue> mediaTypeValues() {
             return Set.of(
-                Tuple.tuple("application/json", Map.of("charset", "UTF-8")),
-                Tuple.tuple("application/x-ndjson", Map.of("charset", "UTF-8")),
-                Tuple.tuple("application/*", Collections.emptyMap()),
-                Tuple.tuple("application/vnd.elasticsearch+json",
+                new MediaType.MediaTypeValue("application/json", Map.of("charset", "UTF-8")),
+                new MediaType.MediaTypeValue("application/x-ndjson", Map.of("charset", "UTF-8")),
+                new MediaType.MediaTypeValue("application/*", Collections.emptyMap()),
+                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"json",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")),
-                Tuple.tuple("application/vnd.elasticsearch+x-ndjson",
+                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"x-ndjson",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")));
         }
     },
@@ -80,7 +79,7 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public String formatPathParameter() {
+        public String queryParameter() {
             return "smile";
         }
 
@@ -90,10 +89,10 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
+        public Set<MediaType.MediaTypeValue> mediaTypeValues() {
             return Set.of(
-                Tuple.tuple("application/smile", Map.of("charset", "UTF-8")),
-                Tuple.tuple("application/vnd.elasticsearch+smile",
+                new MediaType.MediaTypeValue("application/smile", Map.of("charset", "UTF-8")),
+                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"smile",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")));
         }
     },
@@ -107,7 +106,7 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public String formatPathParameter() {
+        public String queryParameter() {
             return "yaml";
         }
 
@@ -117,10 +116,10 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
+        public Set<MediaType.MediaTypeValue> mediaTypeValues() {
             return Set.of(
-                Tuple.tuple("application/yaml", Map.of("charset", "UTF-8")),
-                Tuple.tuple("application/vnd.elasticsearch+yaml",
+                new MediaType.MediaTypeValue("application/yaml", Map.of("charset", "UTF-8")),
+                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"yaml",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")));
         }
     },
@@ -134,7 +133,7 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public String formatPathParameter() {
+        public String queryParameter() {
             return "cbor";
         }
 
@@ -144,16 +143,17 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
+        public Set<MediaType.MediaTypeValue> mediaTypeValues() {
             return Set.of(
-                Tuple.tuple("application/cbor", Map.of("charset", "UTF-8")),
-                Tuple.tuple("application/vnd.elasticsearch+cbor",
+                new MediaType.MediaTypeValue("application/cbor", Map.of("charset", "UTF-8")),
+                new MediaType.MediaTypeValue(VENDOR_APPLICATION_PREFIX +"cbor",
                     Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN,"charset", "UTF-8")));
         }
     };
 
     public static final MediaTypeRegistry<XContentType> MEDIA_TYPE_REGISTRY = new MediaTypeRegistry<XContentType>()
         .register(XContentType.values());
+    public static final String VENDOR_APPLICATION_PREFIX = "application/vnd.elasticsearch+";
 
     /**
      * Accepts a format string, which is most of the time is equivalent to MediaType's subtype i.e. <code>application/<b>json</b></code>
@@ -162,7 +162,7 @@ public enum XContentType implements MediaType {
      * This method will return {@code null} if no match is found
      */
     public static XContentType fromFormat(String format) {
-        return MEDIA_TYPE_REGISTRY.formatToMediaType(format);
+        return MEDIA_TYPE_REGISTRY.queryParamToMediaType(format);
     }
 
     /**
@@ -205,10 +205,7 @@ public enum XContentType implements MediaType {
         return mediaTypeWithoutParameters();
     }
 
-
     public abstract XContent xContent();
 
     public abstract String mediaTypeWithoutParameters();
-
-
 }
